<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="70dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:text="@string/auth_login_text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailLoginTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/auth_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordLoginTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/auth_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/auth_login_text" />

    <TextView
        android:id="@+id/navToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:text="@string/auth_nav_to_register"
        android:textSize="18sp" />

    <Button
        android:id="@+id/NavToRegisterbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/auth_register_text" />
</LinearLayout>